@@ -165,14 +165,21 @@
 			$bargraphinner = $progressbar.find('.bar'),
 			$barextendedinfo = $progressbar.find('.progress-extended'),
 			failnotice = false,
-			bitrates = []; // keep track of the last few bit rates for averaging purposes.
+			bitrates = [], // keep track of the last few bit rates for averaging purposes.
+			d = new Date();
 
 		// Initialize the jQuery File Upload widget:
 		$form.fileupload({
 			url: Core.ROOT_URL + 'jqueryfileupload',
-			formData: { key: '{$element->get('id')}' },
+			formData: { key: '{$element->get('key')}' },
 			previewSourceFileTypes: /^.*$/, // Core+ handles previews of all files ;)
 			autoUpload: true, // By default, files added to the UI widget are uploaded as soon as the user clicks on the start buttons. To enable automatic uploads, set this option to true.
+			multipart: false,
+			maxChunkSize: {$element->get('maxsize')},
+			headers: {
+				'X-Key': '{$element->get('key')}',
+				'X-Upload-Time': Math.round(d.getTime() / 100) // Used to prevent multiple page loads from appending to the same file if there's an error.
+			},
 			start: function(e, data){
 				$progressbar.show();
 				$bargraphinner.width('1%');
